--- a/rps.html
+++ b/rps.html
@@ -16,7 +16,7 @@
 		<h1 id="welcome">rockPaperScissors</h1>
 		<div id="card">
 			<div id="screen">
-				<h2 id="numberofRound">Round 1</h2>
+				<h2 id="numberOfRound">Rock/Paper/Scissors</h2>
 				<h3 id="scoreStatus">
 					Its a Tie <br />
 					Both picked scissors
@@ -29,19 +29,19 @@
 				<h4>
 					COMPUTER:
 					<br />
-					5
+					0
 				</h4>
 			</div>
 
 			<div id="actionbutton">
-				<button>ROCK</button>
-				<button>PAPER</button>
-				<button>SCISSORS</button>
+				<button id="Rock">ROCK</button>
+				<button id="Paper">PAPER</button>
+				<button id="Scissors">SCISSORS</button>
 			</div>
-			<button id="startButton">START</button>
+			<!-- <button id="startButton">START</button> -->
 		</div>
-		<script src="js/game.js"></script>
-		<script src="js/definition.js"></script>
-		<script src="js/event.js"></script>
+		<script src="/js/game.js"></script>
+		<script src="/js/event.js"></script>
+		<!-- <script src="js/event.js"></script> -->
 	</body>
 </html>
