Completed simple web app rock paper scissors game

--- a/rps.html
+++ b/rps.html
@@ -16,20 +16,17 @@
 		<h1 id="welcome">rockPaperScissors</h1>
 		<div id="card">
 			<div id="screen">
-				<h2 id="numberOfRound">Rock/Paper/Scissors</h2>
-				<h3 id="scoreStatus">
-					Its a Tie <br />
-					Both picked scissors
-				</h3>
+				<h2 id="numberOfRound">Choose one</h2>
+				<h3 id="scoreStatus">Rock/Paper/Scissors</h3>
 				<h4>
-					HUMAN:
+					PLAYER:
 					<br />
-					0
+					<span id="displayPlayerScore">0</span>
 				</h4>
 				<h4>
 					COMPUTER:
 					<br />
-					0
+					<span id="displayComputerScore">0</span>
 				</h4>
 			</div>
 
@@ -38,10 +35,8 @@
 				<button id="Paper">PAPER</button>
 				<button id="Scissors">SCISSORS</button>
 			</div>
-			<!-- <button id="startButton">START</button> -->
 		</div>
 		<script src="/js/game.js"></script>
 		<script src="/js/event.js"></script>
-		<!-- <script src="js/event.js"></script> -->
 	</body>
 </html>
